--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#bodyhero">Body Hero</a>
+              <a class="nav-link js-scroll-trigger" href="#home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#bestsellers">Best Sellers</a>
@@ -47,7 +47,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="##GGirl">#Ggirl</a>
+              <a class="nav-link js-scroll-trigger" href="#Products">Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -68,14 +68,14 @@
       </div>
     </header>
 
-    <!-- BOdy Hero -->
-    <section id="body hero">
+    <!-- Bestsellers -->
+    <section id="bestsellers">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Body Hero</h2>
-            <h3 class="section-subheading text-muted">Check out some of our best friends.</h3>
-          </div>
+            <h2 class="section-heading">Best Sellers</h2>
+            <h3 class="section-subheading text-muted">Check out some of our best friends. Made naturally for a natural look. </h3>
+          </div> <!-- added "natural look" to title-->
         </div>
         <div class="row text-center">
           <div class="col-md-4">
@@ -107,12 +107,12 @@
     </section>
 
     <!-- Portfolio Grid -->
-    <section class="bg-light" id="#Ggirls">
+    <section class="bg-light" id="Products">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">#Ggirls</h2>
-            <h3 class="section-subheading text-muted">Meet some of our Glossier girls.</h3>
+            <h2 class="section-heading">Products</h2>
+            <h3 class="section-subheading text-muted">Shop makeup and skincare.</h3>
           </div>
         </div>
         <div class="row">
@@ -123,11 +123,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="skin glow soap">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
-              <p class="text-muted">Illustration</p>
+              <h4>Body Hero</h4>
+              <p class="text-muted">Soap, Glossier way.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -137,11 +137,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="easy to apply lipstick"> <!--Added tag "easy to apply lipstick"-->
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
+              <h4>Generation G</h4>
+              <p class="text-muted">the lipstick you've always wanted</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -154,8 +154,8 @@
               <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>Milky Jelly Cleanser</h4>
+              <p class="text-muted">Cleanser that leaves your skin feeling fresh and glowing</p> <!--Added keyword glowing'-->
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -165,11 +165,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="cloud paint blush"> <!--Added alt tag "cloud paint blush"-->
             </a>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>Cloud Paint</h4>
+              <p class="text-muted">Blush that adds a natural glow</p> <!--Added keyword 'natural' and 'glow'-->
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -179,11 +179,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="balm dotcom"> <!--Added description "balm dotcom"-->
             </a>
             <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
+              <h4>Balm Dotcom</h4>
+              <p class="text-muted">Lip balm, but fun</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -193,11 +193,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="wowder setting powder"> <!--Added tag "wowder setting powder"-->
             </a>
             <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
+              <h4>Wowder</h4>
+              <p class="text-muted">Powder that feels light and leaves a natural glow</p> <!--Added keyword 'natural' 'light' and 'glow'-->
             </div>
           </div>
         </div>
@@ -210,7 +210,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">About</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">How Glossier came to be.</h3>
           </div>
         </div>
         <div class="row">
@@ -226,7 +226,7 @@
                     <h4 class="subheading">Our Humble Beginnings</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Emily Weiss, CEO and Founder, was already running Into the Gloss, a beauty blog. She found out that her readers wanted fuss-free makeup. Emily also noticed that most beauty advertising were based off of telling a woman that she wasn't beautiful enough. This sparked her desire for change. </p>
                   </div>
                 </div>
               </li>
@@ -237,10 +237,10 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4 class="subheading">The Beginnings of Glossier</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Emily sought out people who'd be willing to fund her project and partnered with labs to create the makeup products the women she interacted with had always wanted.</p>
                   </div>
                 </div>
               </li>
@@ -254,7 +254,7 @@
                     <h4 class="subheading">Transition to Full Service</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Glossier's first product launch was an amazing success! The waitlist spiked beyond the team's wildest dreams. Today Glossier continues to make low maintenance products for high maintenance girls.</p>
                   </div>
                 </div>
               </li>
@@ -265,10 +265,10 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
+                    <h4 class="subheading">Skincare and Makeup made easy</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Glossier continues with product launches of Haloscope, Boy Brow, and more. Today Glossier continues to make low maintenance products for high maintenance girls.</p>
                   </div>
                 </div>
               </li>
@@ -290,16 +290,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading">Who's behind it all</h2>
+            <h3 class="section-subheading text-muted">Here's some of the people making the magic.</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-              <h4>Kay Garland</h4>
-              <p class="text-muted">Lead Designer</p>
+              <h4>Emily Weiss</h4>
+              <p class="text-muted">Founder and CEO</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -322,8 +322,8 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Marketer</p>
+              <h4>Helen Steed</h4>
+              <p class="text-muted">Creative Director</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -346,8 +346,8 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-              <h4>Diana Pertersen</h4>
-              <p class="text-muted">Lead Developer</p>
+              <h4>Annie Kreighbaum</h4>
+              <p class="text-muted">Executive Editor</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -370,7 +370,7 @@
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+            <p class="large text-muted">Come and help us make the magic happen!</p>
           </div>
         </div>
       </div>
@@ -410,7 +410,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">We want to hear from you!</h3>
           </div>
         </div>
         <div class="row">
